--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "threejs-journey-exercise",
+  "name": "threejs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy" : "vercel --prod"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.3",
@@ -15,9 +16,12 @@
   "dependencies": {
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "1.4",
     "r3f-perf": "^7.2.1",
     "react": "18.3",
     "react-dom": "18.3",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "vercel": "^39.2.6",
+    "zustand": "4.5"
   }
 }
